# two-way-rpc-demo

./: .gitignore  README.md
backend/: CMakeLists.txt  main.cpp
backend/rpcClient/: rpcSpec.json  rpcclient.h
backend/rpcServer/: abstractrpcserver.h  rpcSpec.json  rpcserver.h
frontend/: index.js  main.js  package-lock.json  package.json
frontend/src/: backendController.js  renderer.js
frontend/static/: index.html  style.css
